# turbogator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.py  debug_local.sh  gator.py  plot.sh  project_questions.md  pyproject.toml  submit.sh  submit_baseline.sh  submit_reference.sh
analysis/: data_io.py  plot_all.py  plot_flop_decomposition.py  plot_heatmaps.py  plot_perf_bars.py  plot_performance.py  plot_roofline.py  plot_speedup_bars.py  plot_style.py  pyproject.toml  style.py
baseline/: benchmark_pytorch.py  generate_validation_data.py
csrc/: Makefile  bindings.cpp
csrc/backends/: equi_geometric_attention_baseline.cpp  equi_geometric_attention_opt_v1.cpp  equi_geometric_attention_opt_v2.cpp  equi_geometric_attention_optimized1.cpp  equi_geometric_attention_optimized2.cpp  equi_geometric_attention_vectorized.cpp  equi_join_baseline.cpp  equi_join_constants.hpp  equi_join_kernel.hpp  equi_join_opt_v1.cpp  equi_join_opt_v2.cpp  equi_join_vectorized.cpp  equi_linear_baseline.cpp  equi_linear_baseline_v1_cached_basis.cpp  equi_linear_opt_v1.cpp  equi_linear_opt_v2.cpp  equi_linear_opt_v3.cpp  equi_linear_opt_vectorized.cpp  equi_linear_vectorized.cpp  equi_rms_norm_baseline.cpp  equi_rms_norm_constants.hpp  equi_rms_norm_opt_v1.cpp  equi_rms_norm_vectorized.cpp  geometric_product_baseline.cpp  geometric_product_opt_v1.cpp  geometric_product_vectorized.cpp  ops.hpp  scaler_gated_gelu_baseline.cpp  scaler_gated_gelu_vectorized.cpp
csrc/src/: gatr_interface.hpp  main.cpp  profiler.cpp
details/: algo_breakdown.md
details/hardware_specs/: container_config.txt  cpuid.txt
docs/: algo_breakdown.md  mv_only_gatr_arch.dot  project_questions.md
docs/hardware_specs/240h/: desc.txt  lscpu.txt  memory_investigation.txt
extra/logos/: doppler_gator.xcf
hardware_specs/: intel_n100.txt  lscpu_report.txt
random/: asd.py  gp_bilinear_basis.txt  join_kernel.txt  op_bilinear_basis.txt
reference/: benchmark_pytorch.py  generate_validation_data.py
results/: history.jsonl
results/baseline/: metrics.json  profile.speedscope.json  pytorch_profile.trace.json
results/plots/: mv_only_gatr_arch.dot
results/reference/: metrics.json  profile.speedscope.json  pytorch_profile.trace.json  validation_config.json
server/: aos-api.service  deploy.sh  main.py  pyproject.toml  worker.py  worker_baseline.py  worker_reference.py
turbogator/: __init__.py  benchmark.py  cpp_bindings.py  validate.py
turbogator/engine/: __init__.py  baseline_gatr.py  cpp_bindings.py  optimised_gatr.py  reference_gatr.py  scalar_gatr_V1.py  scalar_gatr_V2.py  scalar_gatr_V3.py  scalar_opt1_gatr.py  vectorised_gatr.py  vectorised_gatr_1.py
turbogator/models/: asl_gatr.py
turbogator/runtime/: __init__.py  ops.py
turbogator/src/: backend_selection.hpp  fake_backend.hpp  main.cpp  profiler.hpp  validate_main.cpp
