[build-system]
requires = [
    "scikit-build-core<=0.12.2",
    "cmake>=3.15",
    "pybind11>=2.10",
    "wheel",
]
build-backend = "scikit_build_core"

[project]
name = "turbogator"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "torch>=2.1.0,<2.4.1",
  "einops>=0.8.1,<0.9.0",
  "numpy>=1.26,<3.0",
]

[tool.scikit-build.cmake]
build-type = "Release"

[tool.scikit-build.editable]
mode = "inplace"


[dependency-groups]
api = [
  "fastapi==0.110.0",
  "uvicorn==0.29.0",
  "python-multipart==0.0.9",
]
analysis = [
  "matplotlib>=3.8.3",
  "pandas>=2.2.1",
]
